<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FFDA6C"
    android:backgroundTintMode="src_over"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/intputTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="10sp"
        android:textAlignment="textEnd"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/outputTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="2" />

    <TextView
        android:id="@+id/outputTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2pt"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/button1"
        app:layout_constraintEnd_toStartOf="@+id/buttonEqual"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intputTextView"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/buttonDot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2pt"
        android:width="0dp"
        android:backgroundTint="#FFC107"
        android:elevation="5sp"
        android:text="@string/dot"
        android:textSize="32sp"
        app:cornerRadius="1000dp"
        app:iconSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2pt"
        android:width="0dp"
        android:backgroundTint="#FFC107"
        android:elevation="5sp"
        android:text="@string/_0"
        android:textSize="32sp"
        app:cornerRadius="1000dp"
        app:iconSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonMul"
        app:layout_constraintStart_toEndOf="@+id/buttonDot"
        app:layout_constraintTop_toBottomOf="@+id/button8"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/buttonMul"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2pt"
        android:width="0dp"
        android:elevation="5sp"
        android:text="@string/x"
        android:textSize="32sp"
        app:cornerRadius="1000dp"
        app:iconSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonDiv"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toBottomOf="@+id/button9"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/buttonDiv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2pt"
        android:width="0dp"
        android:elevation="5sp"
        android:text="@string/div"
        android:textSize="32sp"
        app:cornerRadius="1000dp"
        app:iconSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonMul"
        app:layout_constraintTop_toBottomOf="@+id/buttonSub"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2pt"
        android:width="0dp"
        android:backgroundTint="#FFC107"
        android:elevation="5sp"
        android:text="@string/_7"
        android:textSize="32sp"
        app:cornerRadius="1000dp"
        app:iconSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonDot"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2pt"
        android:width="0dp"
        android:backgroundTint="#FFC107"
        android:elevation="5sp"
        android:text="@string/_0"
        android:textSize="32sp"
        app:cornerRadius="1000dp"
        app:iconSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2pt"
        android:width="0dp"
        android:backgroundTint="#FFC107"
        android:elevation="5sp"
        android:text="@string/_9"
        android:textSize="32sp"
        app:cornerRadius="1000dp"
        app:iconSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonMul"
        app:layout_constraintEnd_toStartOf="@+id/buttonSub"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/buttonSub"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2pt"
        android:width="0dp"
        android:elevation="5sp"
        android:text="@string/sub"
        android:textSize="32sp"
        app:cornerRadius="1000dp"
        app:iconSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonDiv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/buttonAdd"
        app:layout_constraintVertical_weight="1" />


    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2pt"
        android:width="0dp"
        android:backgroundTint="#FFC107"
        android:elevation="5sp"
        android:text="@string/_4"
        android:textSize="32sp"
        app:cornerRadius="1000dp"
        app:iconSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2pt"
        android:width="0dp"
        android:backgroundTint="#FFC107"
        android:elevation="5sp"
        android:text="@string/_5"
        android:textSize="32sp"
        app:cornerRadius="1000dp"
        app:iconSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2pt"
        android:width="0dp"
        android:backgroundTint="#FFC107"
        android:elevation="5sp"
        android:text="@string/_6"
        android:textSize="32sp"
        app:cornerRadius="1000dp"
        app:iconSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toStartOf="@+id/buttonAdd"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2pt"
        android:width="0dp"
        android:elevation="5sp"
        android:text="@string/add"
        android:textSize="32sp"
        app:cornerRadius="1000dp"
        app:iconSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/buttonBack"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2pt"
        android:width="0dp"
        android:backgroundTint="#FFC107"
        android:elevation="5sp"
        android:text="@string/_1"
        android:textSize="32sp"
        app:cornerRadius="1000dp"
        app:iconSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outputTextView"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="00dp"
        android:layout_margin="2pt"
        android:width="0dp"
        android:backgroundTint="#FFC107"
        android:elevation="5sp"
        android:text="@string/_2"
        android:textSize="32sp"
        app:cornerRadius="1000dp"
        app:iconSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/outputTextView"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2pt"
        android:width="0dp"
        android:backgroundTint="#FFC107"
        android:elevation="5sp"
        android:text="@string/_3"
        android:textSize="32sp"
        app:cornerRadius="1000dp"
        app:iconSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/buttonBack"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/outputTextView"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="0dp"
        android:layout_height="00dp"
        android:layout_margin="2pt"
        android:width="0dp"
        android:backgroundTint="#F44336"
        android:elevation="5sp"
        android:textSize="32sp"
        app:cornerRadius="1000dp"
        app:icon="@drawable/abc_vector_test"
        app:iconGravity="textStart"
        app:iconSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/outputTextView"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/buttonEqual"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2pt"
        android:layout_marginStart="8pt"
        android:layout_marginTop="2pt"
        android:layout_marginEnd="2pt"
        android:layout_marginBottom="2pt"
        android:backgroundTint="#4CAF50"
        android:elevation="5sp"
        android:text="@string/equal"
        app:cornerRadius="1000dp"
        app:iconSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/outputTextView"
        app:layout_constraintTop_toBottomOf="@+id/intputTextView"
        android:textSize="32sp" />

</androidx.constraintlayout.widget.ConstraintLayout>